fix: modal, order + align table

--- a/src/component/TableManage/index.css
+++ b/src/component/TableManage/index.css
@@ -9,7 +9,6 @@
     margin-bottom: 0;
 }
 .table td, .table th {
-    text-align: center;
     vertical-align: middle;
 }
 .table thead th, .table tbody th {
